[package]
name = "ten-x-weather"
version = "0.1.0"
edition = "2021"

[dependencies]

# Async Runtime
tokio={ version = "1.33.0", features = ["rt-multi-thread", "signal"] }

# Web Server
poem="1.3.58"

# Parser
nom="7.1.3"

# Serialization/Deserialization 
serde = { version = "1.0.192", features = ["derive"] }
serde_json="1.0.108"
strum = "0.25.0"
strum_macros = "0.25.0"

# DateTime Support
chrono = { version = "0.4.31", features = ["serde"] }

# Logging
log="0.4.20"
simple_logger="4.2.0"

# Error Handling
thiserror="1.0.50"
